--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,26 +7,31 @@ html, body {
     margin: 0;
 }
 body {
+    /*background-image: url(https://i.ytimg.com/vi/4qJO_ZW3QKc/maxresdefault.jpg);*/
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     font-size: 13pt;
-    font-family: monospace;
-    color: white;
+    font-family: 'Turret Road', cursive;
+    color: #429e32;
     background-color: black;
 }
 #container {
-    padding: 1em;
-    margin-left: 50px;
-    margin-right: 135px;
+    padding: 14px;
+    bottom: 0;
+    position: absolute;
 }
 #cmdline {
     outline: none;
     background-color: transparent;
     margin: 0;
     width: 100%;
+    width: 100%;
     font: inherit;
     border: none;
     color: inherit;
 }
 #output {
+    line-height: 34px;
     clear: both;
     width: 100%;
 }
@@ -46,7 +51,7 @@ body {
     user-select: none;
 }
 .prompt-color {
-    color: #e09f14;
+    color: white;
 }
 .input-line {
     display: -webkit-box;
@@ -89,8 +94,6 @@ body {
     z-index: 9;
     top: 0;
     left: 0;
-    background-color: #e09f14;
-    opacity: 0.8;
     overflow-x: hidden;
     transition: 0.3s;
     padding-top: 60px;
